--- a/src/styles/sass/blocks/_story.sass
+++ b/src/styles/sass/blocks/_story.sass
@@ -14,7 +14,7 @@
   &__text-wrapper
   &__text-title
     h2 
-      color: #413d4b
+      color: $text-color
       font-family: $font-family-PlayfairDisplay
       font-size: 22px
       font-weight: 700
@@ -26,7 +26,7 @@
     margin-top: 28px
     p
       opacity: 0.75
-      color: #413d4b
+      color: $text-color
       font-family: $font-family-Roboto
       font-weight: 300
       line-height: 22px
