--- a/src/styles/sass/blocks/_team.sass
+++ b/src/styles/sass/blocks/_team.sass
@@ -4,7 +4,7 @@
   background: url('../img/bg-team.jpg') center center / cover no-repeat
   .divider
       margin-top: 18px
-      background-color: #413d4b
+      background-color: $text-color
       opacity: 0.3
   &__title
     h2
