--- a/src/styles/sass/style.sass
+++ b/src/styles/sass/style.sass
@@ -7,9 +7,9 @@
   font-size: 14px
   a 
     text-decoration: none
-
 @import '../css/libs/bootstrap-grid.min.css'
 @import '../css/libs/normalize.css'
+
 
 @import 'blocks/header'
 @import 'blocks/story'
@@ -17,3 +17,5 @@
 @import 'blocks/expertise'
 @import 'blocks/team'
 @import 'blocks/projects'
+@import 'blocks/testimonial'
+@import 'blocks/form'
