--- a/src/styles/sass/blocks/_expertise.sass
+++ b/src/styles/sass/blocks/_expertise.sass
@@ -4,11 +4,11 @@
   &__wrapper
     .divider
       margin-top: 18px
-      background-color: #413d4b
+      background-color: $text-color
       opacity: 0.3
   &__title
     h2
-      color: #413d4b
+      color: $text-color
       font-family: $font-family-PlayfairDisplay
       font-size: 22px
       font-weight: 700
@@ -52,7 +52,7 @@
           width: 100%
           height: 100%
     &-title
-      color: #413d4b
+      color: $text-color
       font-family: $font-family-Roboto
       font-weight: 700
       text-align: center
