--- a/src/styles/sass/blocks/_projects.sass
+++ b/src/styles/sass/blocks/_projects.sass
@@ -8,7 +8,7 @@
     justify-content: space-between
     align-items: center
     h2 
-      color: #413d4b
+      color: $text-color
       font-family: $font-family-PlayfairDisplay
       font-size: 22px
       font-weight: 700
@@ -17,7 +17,7 @@
       letter-spacing: 1.1px
     .wrapper
       a
-        color: #413d4b
+        color: $text-color
         font-family: $font-family-Roboto
         font-weight: 300
         text-align: right
@@ -32,7 +32,7 @@
         span
           width: 13px
           height: 1px
-          background: #413d4b
+          background: $text-color
           position: absolute
           &:nth-child(1)
             transform: rotate(-45deg)
@@ -55,14 +55,30 @@
     grid-auto-columns: minmax(100px, 267px)
     grid-auto-rows: minmax(100px, 200px)
     justify-content: center
-  img
-    width: 100%
-    height: 100%
+    a
+      max-height: 200px 
+      max-width: 267px
+      img
+        width: 100%
+        height: 100%
+        object-fit: cover
+  .btn
+    margin-top: 70px
+    transition: .5s all
+    &:hover
+      background: #30235f
+      
 
 @media ( min-width: 320px ) and ( max-width: 992px )
   .project
     padding-top: 30px
+    padding-bottom: 40px
     &__wrapper
       padding-bottom: 30px
     &__title
       flex-direction: column
+    &-img
+      &:nth-child(n+7)
+        display: none
+    .btn
+      margin-top: 30px
