--- a/src/styles/sass/base/_mixins.sass
+++ b/src/styles/sass/base/_mixins.sass
@@ -8,11 +8,12 @@
   font-weight: 400
   text-align: center
   text-transform: uppercase
-  padding: 15px !important
+  padding-left: 15px !important
+  padding-right: 15px !important
   outline: none
   cursor: pointer
   // width: 120px
-  // height: 40px
+  height: 40px
   padding: 0
   background-color: transparent
   border-radius: 3px
