--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -19,6 +19,7 @@ html(lang="ru")
     include sections/project.pug
     include sections/testimonial.pug
     include sections/form.pug
+    include sections/footer.pug
 
   script(src="https://code.jquery.com/jquery-3.6.0.min.js") 
   script(src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js") 
